crates/plotnik-tests/tests/03-analyze/duplicates/duplicate_definition_second_body_ignored.txt
A = (leaf)
A = (a (A))
------------------ DIAGNOSTICS -------------------
error: `A` is already defined
 --> query.ptk:2:1
  |
1 | A = (leaf)
  | ---------- first defined here
2 | A = (a (A))
  | ^^^^^^^^^^^
-------------------- SYMBOLS ---------------------
A
